<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meeting_list.AddMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/linear_layout_margin"
        android:layout_marginLeft="@dimen/linear_layout_margin"
        android:layout_marginTop="@dimen/linear_layout_margin"
        android:layout_marginEnd="@dimen/linear_layout_margin"
        android:layout_marginRight="@dimen/linear_layout_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/meeting_image_img"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/image_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_object_txt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_start_margin"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_object_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Meeting Object"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_input_margin"
            >
            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="DD/MM/YYYY"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:enabled="true"
                android:layout_marginLeft="@dimen/button_margin"
                android:text="GET DATE"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_input_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="Hr:Mn"
                    android:inputType="time"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/time_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:enabled="true"
                android:layout_marginLeft="@dimen/button_margin"
                android:text="GET TIME"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginTop="@dimen/text_input_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Meeting Room"
                android:layout_marginRight="@dimen/spinner_space"
                android:layout_gravity="center_vertical"
                />
            <Spinner
                android:id="@+id/meeting_rooms_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/rooms_name"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_entrant_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/text_input_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Entrant Mail"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meeting_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="@dimen/text_input_start_margin"
            android:layout_gravity="center"
            app:cornerRadius="20dp"
            android:enabled="false"
            android:text="Add"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>