<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_interface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meeting_list.ListMeetingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/meeting_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        >
        
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/meeting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_weight="1"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>
        
        
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/linear_layout_margin"
        android:src="@drawable/ic_baseline_add_white_24"
        android:backgroundTint="#d80911"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meeting_list_rcv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/fragment_meeting_items"
        app:layout_constraintTop_toBottomOf="@id/meeting_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>