...
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    app:layout_constraintStart_toEndOf="@id/meeting_room_icon_img"
    app:layout_constraintBottom_toBottomOf="@id/meeting_room_icon_img"
    app:layout_constraintTop_toTopOf="@id/meeting_room_icon_img">
<TextView
android:id="@+id/meeting_description_txt"
android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:text=""
android:textSize="14sp"
android:textStyle="bold"

...
