<resources>
    <string name="app_name">Ma réu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rooms_prompt">Choose Your Meeting Room</string>
    <string name="meeting_dates">Meeting Dates</string>
    <string name="filter">filter</string>
    <string name="meeting_rooms">Meeting Rooms</string>
    <string name="salle_a">Salle A</string>
    <string-array name="rooms_name">
        <item> Salle A</item>
        <item> Salle B</item>
        <item> Salle C</item>
        <item> Salle D</item>
        <item> Salle E</item>
        <item> Salle F</item>
        <item> Salle G</item>
        <item> Salle H</item>
        <item> Salle I</item>
        <item> Salle J</item>
    </string-array>
</resources>